--- a/dascy_frontend/src/components/navbar/navbar.css
+++ b/dascy_frontend/src/components/navbar/navbar.css
@@ -65,6 +65,7 @@
       border-radius: 5px;
       outline: none;
       cursor: pointer;
+    color: white !important;
 
   }
  .dascy__navbar-menu {
