--- a/dascy_frontend/src/Pages/Login/login.css
+++ b/dascy_frontend/src/Pages/Login/login.css
@@ -1,109 +1,105 @@
-.container{
-    margin: 2rem 1rem;
+.dascy__login-container {
     display: flex;
     justify-content: center;
     align-items: center;
+    min-height: 100vh;
 }
-.dascy__login{
-    width:527px;
-    height: 682px;
-    margin: 2px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    border-radius: 15px;
-    border: 2px solid rgba(71, 70, 70, 0.60);
-    opacity: 0.85;
-    box-shadow: 0px 0px 60.1px 0px rgba(179, 179, 179, 0.44) inset, -25.1px 25.1px 25.1px 0px rgba(255, 255, 255, 0.09) inset;
-}
-h1{
-    color: #000; 
-    font-family: Karla;
-    font-size: 32px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 150%;
-    align-items: center;
-    letter-spacing: -0.704px;
-}
-h3 {
-    color: #000;
+
+.dascy__login-container_wrapper {
+    background-color: var(--color-text2);
+    border: 2px solid rgba(255, 255, 255, .1);
+    backdrop-filter: blur(30px);
+    box-shadow: 0 0 10px rgba(0, 0, 0, .2);
+    width: 420px;
+    color: #fff;
+    border-radius: 10px;
+    padding: 30px 40px;
     font-family: var(--font-family);
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 500;
-    padding: 1rem 0 ;
- 
 }
 
-form {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    width: 300px;
-
- }
-
-
-  input {
-      padding:  10px 20px ;
-      border: none;
-      border-bottom: 1px solid gray;
-      background-color: #EFEFEF;
-      border-radius: 20px;
-      border: none;
-      
-  }
-  
-  h5{
-    margin-top: 1rem;
-    color: #5955B3;
+.dascy__login-container_wrapper h1 {
+    font-size: 36px;
     text-align: center;
-    font-family: Inter;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 500;
-  }
+}
 
-   button {
-        margin: 1rem;
-       padding: 10px;
-      
-       border: none;
-       background-color: var(--color-text2);
-       cursor: pointer;
-       color: white;
-       border-radius: 10px;
-       box-shadow: 0px 2px 2px 0px #5955B3;
-   }
+.dascy__login-container_wrapper .dascy__login-wrapper_input-box {
+    position: relative;
+    width: 100%;
+    height: 50px;
+    margin: 30px 0;
+}
 
-   p {
-       font-size: 12px;
-       color: red;
-       text-align: center;
-   }
+.dascy__login-wrapper_input-box input {
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    border: none;
+    outline: none;
+    border: 2px solid rgba(255, 255, 255, .2);
+    border-radius: 40px;
+    font-size: 16px;
+    color: #fff;
+    padding: 20px 45px 20px 20px;
+}
 
-   span {
-       font-size: 12px;
-       text-align: center;
-        font-family: Inter;
-        font-size: 18px;
-        font-style: normal;
-        font-weight: 500;
-        line-height: normal;
-   }
+.dascy__login-container_wrapper .dascy__login-wrapper_input-box input::placeholder {
+    color: #fff;
+}
 
-   .dascy__signup{
-    color: #5955B3;
-    font-size: bold;
+.dascy__login-wrapper_input-box .icon {
+    position: absolute;
+    right: 20px;
+    top: 25px;
+    transform: translateY(-50%);
+    font-size: 16px;
+}
 
-   }
-   .dascy__signup:hover{
-    color: #AA2EE6;
+.dascy__login-container_wrapper .dascy__login-remember-forgot {
+    display: flex;
+    justify-content: space-between;
+    font-size: 14.5px;
+    margin: -15px 0 15px;
+}
 
-   }
+.dascy__login-remember-forgot label input {
+    accent-color: #fff;
+    margin-right: 4px;
+}
 
-   hr{
-    background: rgba(0, 0, 0, 0.50);
-   }
+.dascy__login-remember-forgot a {
+    color: #fff;
+}
+
+.dascy__login-remember-forgot a:hover {
+    text-decoration: underline;
+}
+
+.dascy__login-container_wrapper button {
+    width: 100%;
+    height: 45px;
+    background-color: #fff;
+    border: none;
+    outline: none;
+    border-radius: 40px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+    cursor: pointer;
+    font-size: 16px;
+    color: #333;
+    font-weight: 700;
+}
+
+.dascy__login-container_wrapper button:hover {
+    background-color: #EFEFEF;
+
+}
+
+.register-link {
+    font-weight: 14.5px;
+    text-align: center;
+    margin: 20px 0 15px;
+}
+
+.register-link p a:hover {
+    color: #333;
+
+}
