--- a/dascy_frontend/src/index.css
+++ b/dascy_frontend/src/index.css
@@ -6,6 +6,7 @@
     --gradient-text: linear-gradient(90deg, rgba(238, 240, 253, 1) 0%, rgba(89, 85, 179, 1) 100%);
     --color-text: #040C18;
     --color-text2: #AA2EE6;
+    --color-text3: #333;
     --color-footer: #EEF0FD;
 
 }
