--- a/dascy_frontend/src/components/navbar/navbar.css
+++ b/dascy_frontend/src/components/navbar/navbar.css
@@ -1,144 +1,210 @@
-.dascy__navbar{
-    display:flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 2rem 6rem;
-    box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.1);
-    width: 100%;
-    height: 80px;
+.dascy__navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2rem 6rem;
+  box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.1);
+  width: 100%;
+  height: 80px;
 }
 
-.dascy__navbar-links{
-    flex:1;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
+.dascy__navbar-links {
+  flex: 1;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
 }
 
-.dascy__navbar-links_logo{
-    margin-right: 2rem;
+.dascy__navbar-links_logo {
+  margin-right: 2rem;
 }
 
-.dascy__navbar-links_logo img{
-  
+.dascy__navbar-links_logo img {
 }
 
-
-.dascy__navbar-links_container{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
+.dascy__navbar-links_container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
 }
 
-.dascy__navbar-sign{
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    flex-wrap: nowrap;
+.dascy__navbar-sign {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  flex-wrap: nowrap;
 }
 
- .dascy__navbar-links_container p,
- .dascy__navbar-sign p,
- .dascy__navbar-menu_container p {
-     color: var(--color-text);
-     font-family:var(--font-family);
-     font-weight: 500;
-     font-size: 16px;
-     line-height: 25px;
-     text-transform: capitalize;
-     margin: 0 1rem;
-     cursor: pointer;
- }
+.dascy__navbar-links_container p,
+.dascy__navbar-sign p,
+.dascy__navbar-menu_container p {
+  color: var(--color-text);
+  font-family: var(--font-family);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 25px;
+  text-transform: capitalize;
+  margin: 0 1rem;
+  cursor: pointer;
+}
 
+.dascy__navbar-sign button,
+.dascy__navbar-menu_container button {
+  padding: 0.5rem 1rem;
+  position: relative;
+  background: var(--color-text2);
+  font-family: var(--font-family);
+  font-weight: 500;
+  line-height: 25px;
+  border: 2px solid var(--color-text2);
+  letter-spacing: 2px;
+  left: 1153px;
+  top: 55px;
+  border: 0;
+  border-radius: 5px;
+  outline: none;
+  cursor: pointer;
+  color: white !important;
+  transition: 0.5s;
+}
+.dascy__navbar-menu {
+  margin-left: 1rem;
+  display: none;
+  position: relative;
+}
 
+.dascy__navbar-menu svg {
+  cursor: pointer;
+}
+.dascy__navbar-menu_container {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  flex-direction: column;
+  text-align: end;
+  background: var(--color-footer);
+  padding: 2rem;
+  position: absolute;
+  top: 40px;
+  right: 0;
+  margin-top: 1rem;
+  min-width: 210px;
+  border-radius: 5px;
+  box-shadow: 0 0 5 rgb(0, 0, 0, 0, 2);
+}
 
-  .dascy__navbar-sign button,
-  .dascy__navbar-menu_container button {
-      padding: 0.5rem 1rem;
-      background: var(--color-text2);
-      font-family: var(--font-family);
-      font-weight: 500;
-      line-height: 25px;
-      left: 1153px;
-      top: 55px;
-      border: 0;
-      border-radius: 5px;
-      outline: none;
-      cursor: pointer;
-    color: white !important;
+.dascy__navbar-menu_container p {
+  margin: 1rem 0;
+}
 
+.dascy__navbar-menu_container-links-sign {
+  display: none;
+}
+/* animation for register button */
+
+.dascy__navbar-sign .btn {
+  position: relative;
+  display: inline-block;
+  padding: 10px 15px;
+  background: white;
+  color: black;
+  border: 2px solid var(--color-text2);
+  margin: 40px;
+  text-decoration: none;
+  font-weight: 600;
+  letter-spacing: 2px;
+  transition: 0.5s;
+}
+.dascy__navbar-sign .btn:hover {
+  transition-delay: 1.5s;
+  filter: hue-rotate(1deg);
+  box-shadow: 0 0 05px var(--color-text2), 0 0 10px var(--color-text2);
+}
+
+.dascy__navbar-sign .btn span {
+  position: relative;
+  z-index: 100;
+  color: #000;
+}
+.dascy__navbar-sign .btn span:hover {
+  color: #fff;
+}
+
+.dascy__navbar-sign .btn::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: -20px;
+  width: 20px;
+  height: 2px;
+  background: var(--color-text2);
+  transform: translateY(-50%);
+  box-shadow: 5px -8px 0 var(--color-text2), 5px 8px 0 var(--color-text2);
+  transition: width 0.5s, left 0.5s, height 0.5s, box-shadow 0.5s;
+  transition-delay: 1s, 0.5s, 0s, 0s;
+}
+
+.dascy__navbar-sign .btn:hover::before {
+  width: 60%;
+  height: 100%;
+  left: -2px;
+  box-shadow: 5px 0 0 var(--color-text2), 5px 0 0 var(--color-text2);
+  transition-delay: 0s, 0.5s, 1s, 1s;
+}
+
+.dascy__navbar-sign .btn::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  right: -20px;
+  width: 20px;
+  height: 2px;
+  background: var(--color-text2);
+  transform: translateY(-50%);
+  box-shadow: -5px -8px 0 var(--color-text2), -5px 8px 0 var(--color-text2);
+  transition: width 0.5s, left 0.5s, height 0.5s, box-shadow 0.5s;
+  transition-delay: 1s, 0.5s, 0s, 0s;
+}
+
+.dascy__navbar-sign .btn:hover::after {
+  width: 60%;
+  height: 100%;
+  right: -2px;
+  box-shadow: -5px 0 0 var(--color-text2), -5px 0 0 var(--color-text2);
+  transition-delay: 0s, 0.5s, 1s, 1s;
+}
+
+/* navbar responsive */
+@media screen and (max-width: 1050px) {
+  .dascy__navbar-links_container {
+    display: none;
   }
- .dascy__navbar-menu {
-     margin-left: 1rem;
-     display: none;
-     position: relative;
 
- }
+  .dascy__navbar-menu {
+    display: flex;
+  }
+}
 
- .dascy__navbar-menu svg {
-     cursor: pointer;
- }
+@media screen and (max-width: 700px) {
+  .dascy__navbar {
+    padding: 2rem 4rem;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .dascy__navbar {
+    padding: 2rem;
+  }
+
+  .dascy__navbar-sign {
+    display: none;
+  }
+
   .dascy__navbar-menu_container {
-      display: flex;
-      justify-content: flex-end;
-      align-items: flex-end;
-      flex-direction: column;
-      text-align: end;
-      background: var(--color-footer);
-      padding: 2rem;
-      position: absolute;
-      top: 40px;
-      right: 0;
-      margin-top: 1rem;
-      min-width: 210px;
-      border-radius: 5px;
-      box-shadow: 0 0 5 rgb(0, 0, 0, 0, 2);
-  }
-
-  .dascy__navbar-menu_container p {
-      margin: 1rem 0;
-
+    top: 20px;
   }
 
   .dascy__navbar-menu_container-links-sign {
-      display: none;
+    display: block;
   }
-
-  @media screen and (max-width:1050px) {
-      .dascy__navbar-links_container {
-          display: none;
-      }
-
-      .dascy__navbar-menu {
-          display: flex;
-      }
-          
-
-  }
-
-  @media screen and (max-width:700px) {
-      .dascy__navbar {
-          padding: 2rem 4rem;
-      }
-
-
-  }
-
-  @media screen and (max-width:550px) {
-      .dascy__navbar {
-          padding: 2rem;
-      }
-
-      .dascy__navbar-sign {
-          display: none;
-      }
-
-      .dascy__navbar-menu_container {
-          top: 20px;
-      }
-
-      .dascy__navbar-menu_container-links-sign {
-          display: block;
-      }
-
-  }
+}
