--- a/dascy_frontend/src/Pages/OSI/osi.css
+++ b/dascy_frontend/src/Pages/OSI/osi.css
@@ -1,5 +1,5 @@
 .dascy__osi-continer{
-  background: linear-gradient(-45deg, red, purple, blue, yellow);
+  background: linear-gradient(-45deg, red, #f0c808, purple, blue);
   background-size: 400% 400%;
 	width: 100%;
 	height: 100vh;
@@ -9,7 +9,6 @@
 
 section {
   display: flex;
-  width: 100vw;
   justify-content: center;
   flex-direction: column;
   overflow: hidden;
