--- a/dascy_frontend/src/Pages/PhyLayer/idTwo/idTwo.css
+++ b/dascy_frontend/src/Pages/PhyLayer/idTwo/idTwo.css
@@ -540,3 +540,15 @@ input:checked + label .dascy__idTwo-description{
 #arr3-x{
     height: 1px;
 }
+#arr3-x{
+    margin-top: 180px;
+    margin-bottom: 130px;
+}
+#arr5-x{
+    margin-top: 180px;
+    margin-bottom: 130px;
+}
+#arr6-x{
+    margin-top: 180px;
+    margin-bottom: 130px;
+}
